Fixes chat control icon overlap Updates Insert Buddy Snap to `desktop.ui.openWindow`

--- a/desktop/assets/css/mobile.css
+++ b/desktop/assets/css/mobile.css
@@ -4,7 +4,7 @@
 }
 
 .mobile_chatControl {
-  width: 64px;
+  width: 86px;
   height: 64px;
   font-size: 64px !important;
 }
